fix(Post): Center align for images

--- a/web_modules/layouts/Post/Post.scss
+++ b/web_modules/layouts/Post/Post.scss
@@ -49,8 +49,8 @@
 
   img {
     max-width: 100%;
-    text-align: center;
     display: block;
+    margin: auto;
   }
 }
 
